changes to the home page

--- a/styles.css
+++ b/styles.css
@@ -16,30 +16,37 @@
 }
 
 .container {
-    text-align: center;
-    padding-left: 22%;
+    display: flex;
+    align-items: center;
+    padding-left: 10%;
     padding-top: 10%;
-    max-width: 80%;
-
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 35px;
-    color: #272727;
 }
+
+
+.image-stack {
+    display: flex;
+    flex-direction: column;
+}
+
+.creative{
+    padding-left: 6%;
+    width: 200px;
+    height: 100px;
+}
+
+.developer{
+    width: 600px;
+    height: 500px;
+}
+
 .text1 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 32px;
-    color: #272727;
-
+    text-align: right;
+    padding-left: 10%;
 }
-.text2 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 32px;
-    color: #006400;
+  
 
-}
+
+
 .text3 {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
@@ -73,14 +80,7 @@
     color: #272727;
 }
 
-.longparagraph {
-    text-align: center;
-    padding-left: 22%;
-    max-width: 80%;
-    font-family:  'Poppins', sans-serif;
-    font-size: 12px;
-    color: #272727;
-}
+
 
  
 .typing {
